# darkfs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
benches/: throughput.rs
src/: lib.rs  main.rs
src/crypto/: cipher.rs  kdf.rs  keys.rs  locator.rs  mod.rs
src/fs/: directory.rs  file.rs  inode.rs  mod.rs  ops.rs  path.rs
src/fuse/: handler.rs  mod.rs
src/store/: image.rs  mod.rs  slots.rs  superblock.rs
src/util/: constants.rs  errors.rs  mod.rs
tests/: integration.rs  pentest.rs
tests/common/: mod.rs
tests/integration/: collision.rs  deniability.rs  directories.rs  multi_user.rs  roundtrip.rs  security.rs  wrong_passphrase.rs
tools/: mkdark.rs  mkvoid.rs  stats_verify.rs
